style.css
/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}

/* === Palette 
   light brown: #c3b1a6
   ghost brown: #efeae8
   ghost brown (shadow): #efeae8
*/

/* === Pattern Library HUD */

/* BRAND */

.hud-brand {
position: fixed;
top: 0;
width: 180px;
height: 179px;
background: #efeae8;
border-bottom: solid 1px #e3d1c6;
border-right: solid 1px #c3b1a6;
}
.hud-brand a {
background: transparent url(i/flower-shaded-150.png) 15px 15px no-repeat;
height: 180px;
display: block;
}

/* NAV */

.hud-nav {
    overflow-x: hidden;
    overflow-y: auto !important;
    top: 180px;
    bottom: 0;
    position: fixed;
    width: 180px;
background: #c3b1a6;
background: #efeae8;
border-right: solid 1px #c3b1a6;
}
.hud-nav ul {
  font-size: 17px;
}
.hud-nav ul > li {
color: #837166;
padding: 15px 0 15px 15px;
border-bottom: solid 1px #e3d1c6;
cursor: default;
}
.hud-nav li:hover,
.hud-nav li.selected {
color: #212121;
background: #fff;
}
.hud-nav li:hover > ul {
background: #efeae8;
}
.hud-nav li > ul {
font-size: 80%;
border-top: solid 1px #e3d1c6;
margin: 15px -15px -15px -15px;
}
.hud-nav li > ul > li {
padding: 10px 0 10px 40px;
}
.hud-nav li > ul > li:last-child {
border-bottom: 0;
}
.hud-nav a {
text-decoration: none;
color: #af2d27;
font-weight: bold;
}
#wrap {
margin-left: 180px;
}
.local-header {
padding-bottom: 2em;
}
.local-header h1 {
font-size: 1.6em;
font-weight: bold;
}
.local-header h2 {
font-size: 1.2em;
opacity: .7;
}

/* WIDTH LOGGER*/
#width-logger {
position: absolute;
right: 25px;
top: 25px;
border-radius: 15px;
display: block;
background: #af2d27;
padding: 4px 11px;
color: #fff;
opacity: .5;
}


/* === Pattern Style Library */

/* = BASE */

body {
color: #212121;
font: 14px/1.4 "Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
margin: 0;
padding: 0;
}

/* = LAYOUT */

#wrap {
padding: 25px;
}

/* = MODULE */

/* = STATE */

/* = GRID BOXES */

.grid {
background: rgba(209,204,202,.4);
padding: 20px;
}
.grid * {
-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
}

/* - HEADER */
.site-brand, .site-search {
display: inline-block;
text-align: center;
padding: 40px 20px;
background: rgba(255,255,255,.9);
margin-bottom: 20px;
}
.site-brand {
float: left;
width: 60%;
}
.site-search {
float: right;
width: 38%;
}

/* - SITE NAV */

.site-nav {
clear: both;
background: rgba(255,255,255,.9);
padding: 10px;
margin-bottom: 20px;
}
.site-nav li {
display: inline-block;
margin-right: 5px;
padding: 5px 15px;
background: rgba(209,204,202,.4);
}


/* - SIDEBARS */
.sidebar {
margin-bottom: 20px;
position: absolute;
top: 0;
min-height: 400px;
}
.left-sidebar {
min-width: 150px;
}
.right-sidebar {
right: 0;
min-width: 300px;
}
.widget {
font-size: .9em;
text-align: center;
padding: 10px 0;
margin-bottom: 20px;
background: rgba(255,255,255,.9);
}

/* - FOOTER */
.site-footer {
clear: both;
text-align: center;
padding: 30px 20px;
background: rgba(255,255,255,.9);
width: 100%;
}

/* - MAIN CONTENT */
.page-content {
position: relative;
}
.content-wrap {
position: absolute;
position: relative;
top: 0;
left: 0px;
margin: 0 320px 20px 170px;
}

/* Featured Images */
.featured-image {
color: #aaa;
text-align: center;
background: #aaa;
}

/* Entry Lists */ 
article, .entry-list-full li, .entry-list-terse {
clear: both;
background: rgba(255,255,255,.9);
margin-bottom: 20px;
}
.entry-list-full .featured-image {
width: 40%;
padding-top: 20%; 
margin: 0 10px 10px 0;
float: left;
}

/* Entry */
.entry-title {
font-size: 1.5em;
font-weight: bold;
}
.entry-byline {
font-size: .9em;
}
.entry-header {
margin-bottom: 10px;
}
.entry-featured .featured-image,
.entry-full .featured-image {
width: 100%;
padding-top: 60%; 
margin-bottom: 20px;
}

